--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <ul>
     <li><a href="mini-slider.html">Mini-slider</a></li>
     <li><a href="drag-n-drop-sources.html">Drag-n-drop-sources</a></li>
+    <li><a href="slider.html">Slider</a></li>
 </ul>
 </body>
 </html>
