--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <li><a href="mini-slider.html">Mini-slider</a></li>
     <li><a href="drag-n-drop-sources.html">Drag-n-drop-sources</a></li>
     <li><a href="slider.html">Slider</a></li>
+    <li><a href="hover-game.html">Hover-game</a></li>
+
 </ul>
 </body>
 </html>
