--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li><a href="drag-n-drop-sources.html">Drag-n-drop-sources</a></li>
     <li><a href="slider.html">Slider</a></li>
     <li><a href="hover-game.html">Hover-game</a></li>
-
+    <li><a href="aim-training.html">Aim-training</a></li>
 </ul>
 </body>
 </html>
